--- a/pages/about.html
+++ b/pages/about.html
@@ -70,24 +70,27 @@
                             My Previous Career
                         </h2>
                         <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing
-                            elit. Facilis, nam. Rem dolores earum, esse nam labore
-                            sit quidem expedita dolore soluta explicabo doloribus
-                            nihil consequatur repellendus nostrum, enim eum.
-                            Nostrum! Lorem ipsum dolor sit amet, consectetur
-                            adipisicing elit. In non voluptatum veritatis fugiat
-                            obcaecati laborum dolorem facere optio vero quas illo
-                            temporibus atque deserunt harum ipsam, reprehenderit
-                            excepturi recusandae quasi. Lorem ipsum dolor sit amet
-                            consectetur adipisicing elit. In distinctio tempore
-                            numquam beatae deleniti odit, maiores alias
-                            reprehenderit commodi et officiis perferendis fugiat
-                            voluptatem cum id, voluptates doloribus quis
-                            dignissimos! Lorem ipsum dolor sit amet consectetur,
-                            adipisicing elit. Maxime atque eos fuga. Quam
-                            consequatur magni necessitatibus exercitationem ea
-                            suscipit reprehenderit incidunt, totam libero sed maxime
-                            quos deleniti amet, quisquam aliquid!
+                            In my previous career, I served as a chef in notable fine dining establishments in both 
+                            Darwin and Brisbane, contributing my culinary expertise to Peewees at the Point 
+                            and French Restaurant Harves. About a year ago, I underwent a slight career transition, 
+                            stepping into the role of a Barista at a local café in Brisbane. This deliberate move allowed 
+                            me to delve into the intricacies of coffee craftsmanship, refining my skills in precision and 
+                            customer service.
+                            <br>
+                            <br>
+                            This transition represented a calculated shift from the culinary realm to the nuances of 
+                            coffee culture, offering a unique perspective within the hospitality industry. In my current 
+                            role, I am dedicated to the art of coffee preparation, seamlessly integrating my culinary 
+                            proficiency with a heightened attention to detail. This professional evolution underscores 
+                            my adaptability and steadfast commitment to achieving excellence in the dynamic hospitality 
+                            landscape.
+                            <br>
+                            <br>
+                            Reflecting on this transformative journey, I am eager to leverage my diverse skill set in 
+                            anticipation of future professional opportunities. This experience has not only expanded my 
+                            expertise but has also cultivated a refined approach to delivering exceptional hospitality 
+                            experiences. I look forward to contributing my skills and knowledge to the ever-evolving 
+                            dynamics of the tech industry in the chapters that lie ahead.
                         </p>
                     </article>
 
@@ -104,24 +107,18 @@
                             My Hobbies
                         </h2>
                         <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing
-                            elit. Facilis, nam. Rem dolores earum, esse nam labore
-                            sit quidem expedita dolore soluta explicabo doloribus
-                            nihil consequatur repellendus nostrum, enim eum.
-                            Nostrum! Lorem ipsum dolor sit amet, consectetur
-                            adipisicing elit. In non voluptatum veritatis fugiat
-                            obcaecati laborum dolorem facere optio vero quas illo
-                            temporibus atque deserunt harum ipsam, reprehenderit
-                            excepturi recusandae quasi. Lorem ipsum dolor sit amet
-                            consectetur adipisicing elit. In distinctio tempore
-                            numquam beatae deleniti odit, maiores alias
-                            reprehenderit commodi et officiis perferendis fugiat
-                            voluptatem cum id, voluptates doloribus quis
-                            dignissimos! Lorem ipsum dolor sit amet consectetur,
-                            adipisicing elit. Maxime atque eos fuga. Quam
-                            consequatur magni necessitatibus exercitationem ea
-                            suscipit reprehenderit incidunt, totam libero sed maxime
-                            quos deleniti amet, quisquam aliquid!
+                            Beyond my professional endeavors, I find immense joy in pursuing my culinary 
+                            passions as a hobby. Cooking and baking have become integral parts of my life, 
+                            allowing me to explore creativity outside the structured kitchen environment. 
+                            In my free time, I enjoy experimenting with flavors, textures, and presentations, 
+                            often creating delectable desserts that are a visual and flavoursome treat. 
+                            <br>
+                            <br>
+                            Whether it's crafting the perfect cake or experimenting with savory delights, 
+                            my kitchen is my creative sanctuary. The process of transforming raw ingredients 
+                            into something beautiful and delicious fuels my passion. These culinary endeavors, 
+                            captured in images, reflect the heart and soul I pour into my hobby outside the 
+                            professional realm.
                         </p>
                     </article>
 
@@ -147,24 +144,22 @@
                             Why I Want to be a Developer
                         </h2>
                         <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing
-                            elit. Facilis, nam. Rem dolores earum, esse nam labore
-                            sit quidem expedita dolore soluta explicabo doloribus
-                            nihil consequatur repellendus nostrum, enim eum.
-                            Nostrum! Lorem ipsum dolor sit amet, consectetur
-                            adipisicing elit. In non voluptatum veritatis fugiat
-                            obcaecati laborum dolorem facere optio vero quas illo
-                            temporibus atque deserunt harum ipsam, reprehenderit
-                            excepturi recusandae quasi. Lorem ipsum dolor sit amet
-                            consectetur adipisicing elit. In distinctio tempore
-                            numquam beatae deleniti odit, maiores alias
-                            reprehenderit commodi et officiis perferendis fugiat
-                            voluptatem cum id, voluptates doloribus quis
-                            dignissimos! Lorem ipsum dolor sit amet consectetur,
-                            adipisicing elit. Maxime atque eos fuga. Quam
-                            consequatur magni necessitatibus exercitationem ea
-                            suscipit reprehenderit incidunt, totam libero sed maxime
-                            quos deleniti amet, quisquam aliquid!
+                            Embarking on a new chapter in my professional journey, I am drawn to the realm of 
+                            software development with a fervent desire to acquire new skills and contribute 
+                            meaningfully to real-world challenges. The prospect of learning and building 
+                            innovative solutions resonates deeply with my intrinsic love for knowledge and 
+                            creation. I am excited about the opportunity to tackle complex problems, applying 
+                            my culinary precision and problem-solving mindset to the dynamic field of technology. 
+                            This transition aligns seamlessly with my aspiration to make a positive impact on the 
+                            world through meaningful and practical contributions in the tech space.
+                            <br>
+                            <br>
+                            In the world of software development, I envision a landscape where I can harness my 
+                            passion for learning and building to effect positive change. This transition represents 
+                            a natural evolution for me, and I eagerly anticipate applying my skills to create 
+                            solutions that address pressing challenges in the tech industry. The opportunity to 
+                            contribute my unique perspective and problem-solving abilities to the world of software 
+                            development is both exhilarating and fulfilling.
                         </p>
                     </article>
 
