--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 
             <!-- Text Component: Responsive navigation menu -->
             <nav>
-                <div id="nav-buttons-root" class="nav-buttons-root-hide">
+                <section id="nav-buttons-root" class="nav-buttons-root-hide">
                     <a class="nav-button" href="./index.html">Home</a>
                     <a class="nav-button" href="./pages/about.html">About</a>
                     <a class="nav-button" href="./pages/blog.html">Blog</a>
                     <a class="nav-button" href="./pages/contact.html">Contact</a>
-                </div>
+                </section>
                 <a class="nav-icon" onclick="toggleNavMenu()">
                     <i class="fa fa-bars"></i>
                 </a>
@@ -63,16 +63,16 @@
 
                 <!-- Graphical Component: Intro bio about me with an image -->
                 <section class="bio-root">
-                    <div>
-                        <div>
+                    <section>
+                        <section>
                             <h1>
                                 Shuzhen Liu(Esther)
                             </h1> 
                             <h4>
                                 Software developer
                             </h4>
-                        </div>
-                        <div class="bio-description">
+                        </section>
+                        <section class="bio-description">
                             <p>
                                 Hi! Welcome to my portfolio! 
                                 <br>
@@ -85,8 +85,8 @@
                                 <br>
                                 Feel free to look around and get to know more about me and where I want to go with my career.
                             </p>
-                        </div>
-                    </div>
+                        </section>
+                    </section>
                     <aside>
                         <img src="./images/Esther1.jpg" alt="esther1"/>
                     </aside>  
@@ -97,20 +97,20 @@
                     <h5>
                         My Skills
                     </h5>
-                    <div class="skills-row-container">
-                        <div class="skill-lozenge">HTML</div>
-                        <div class="skill-lozenge">CSS</div>
-                        <div class="skill-lozenge">Python</div>
-                        <div class="skill-lozenge">Git</div>
-                        <div class="skill-lozenge">Web Development</div>
-                    </div>
-                    <div class="skills-row-container">
-                        <div class="skill-lozenge">Flask</div>
-                        <div class="skill-lozenge">MySQL</div>
-                        <div class="skill-lozenge">Backend Development</div>
-                        <div class="skill-lozenge">OOP</div>
-                        <div class="skill-lozenge">SASS</div>
-                    </div>
+                    <section class="skills-row-container">
+                        <section class="skill-lozenge">HTML</section>
+                        <section class="skill-lozenge">CSS</section>
+                        <section class="skill-lozenge">Python</section>
+                        <section class="skill-lozenge">Git</section>
+                        <section class="skill-lozenge">Web Development</section>
+                    </section>
+                    <section class="skills-row-container">
+                        <section class="skill-lozenge">Flask</section>
+                        <section class="skill-lozenge">MySQL</section>
+                        <section class="skill-lozenge">Backend Development</section>
+                        <section class="skill-lozenge">OOP</section>
+                        <section class="skill-lozenge">SASS</section>
+                    </section>
                 </section>
             </section>
         </main>
@@ -121,7 +121,7 @@
             <!-- Graphical Component: Contact me through social media -->
             <section class="social-media">
                 <h5>Get in touch with me today</h5>
-                <div class="social-contacts-container">
+                <section class="social-contacts-container">
                     <a href="https://www.facebook.com" target="_blank">
                         <i class="fa-brands fa-facebook"></i>
                     </a>
@@ -131,7 +131,7 @@
                     <a href="https://www.linkedin.com" target="_blank">
                         <i class="fa-brands fa-linkedin"></i>
                     </a>
-                </div>
+                </section>
             </section>
 
             <!-- Text Component: Send mail button -->
