--- a/pages/about.html
+++ b/pages/about.html
@@ -43,12 +43,12 @@
 
             <!-- Text Component: Responsive navigation menu -->
             <nav>
-                <div id="nav-buttons-root" class="nav-buttons-root-hide">
+                <section id="nav-buttons-root" class="nav-buttons-root-hide">
                     <a class="nav-button" href="../index.html">Home</a>
                     <a class="nav-button" href="../pages/about.html">About</a>
                     <a class="nav-button" href="../pages/blog.html">Blog</a>
                     <a class="nav-button" href="../pages/contact.html">Contact</a>
-                </div>
+                </section>
                 <a class="nav-icon" onclick="toggleNavMenu()">
                     <i class="fa fa-bars"></i>
                 </a>
@@ -59,10 +59,10 @@
         <!-- Page Content -->
         <main>   
             <section>
-                <div class="heading">
+                <section class="heading">
                     <h1>About Me</h1>
-                </div>
-                <div class="about">
+                </section>
+                <section class="about">
 
                     <!-- Text Component: Article with Header -->
                     <article>
@@ -98,8 +98,8 @@
                     <aside>
                         <img src="../images/Esther3.jpg" alt="esther3"/>
                     </aside>
-                </div>
-                <div class="about">
+                </section>
+                <section class="about">
 
                     <!-- Text Component: Article with Header -->
                     <article>
@@ -124,19 +124,19 @@
 
                      <!--Graphical Component: Side Image Grid-->
                     <aside>
-                        <div class="image-grid-4">
-                            <div class="image-grid-row">
+                        <section class="image-grid-4">
+                            <section class="image-grid-row">
                                 <img src="../images/coffee.jpg" alt="coffee"/>
                                 <img src="../images/anniversary.jpg" alt="anniversary"/>
-                            </div>
-                            <div class="image-grid-row">
+                            </section>
+                            <section class="image-grid-row">
                                 <img src="../images/birthday.jpg" alt="birthday"/>
                                 <img src="../images/cake.jpg" alt="cake"/>
-                            </div>
-                        </div>
+                            </section>
+                        </section>
                     </aside>
-                </div>
-                <div class="about">
+                </section>
+                <section class="about">
 
                     <!-- Text Component: Article with Header -->
                     <article>
@@ -167,7 +167,7 @@
                     <aside>
                         <img src="../images/Esther2.jpg" alt="esther2"/>
                     </aside>
-                </div>
+                </section>
             </section>
         </main>
         
@@ -177,7 +177,7 @@
             <!-- Graphical Component: Contact me through social media -->
             <section class="social-media">
                 <h5>Get in touch with me today</h5>
-                <div class="social-contacts-container">
+                <section class="social-contacts-container">
                     <a href="https://www.facebook.com" target="_blank">
                         <i class="fa-brands fa-facebook"></i>
                     </a>
@@ -187,7 +187,7 @@
                     <a href="https://www.linkedin.com" target="_blank">
                         <i class="fa-brands fa-linkedin"></i>
                     </a>
-                </div>
+                </section>
             </section>
 
             <!-- Text Component: Send mail button -->
