--- a/pages/blog-posts/blog-1-kahoot.html
+++ b/pages/blog-posts/blog-1-kahoot.html
@@ -43,12 +43,12 @@
 
             <!-- Text Component: Responsive navigation menu -->
             <nav>
-                <div id="nav-buttons-root" class="nav-buttons-root-hide">
+                <section id="nav-buttons-root" class="nav-buttons-root-hide">
                     <a class="nav-button" href="../../index.html">Home</a>
                     <a class="nav-button" href="../../pages/about.html">About</a>
                     <a class="nav-button" href="../../pages/blog.html">Blog</a>
                     <a class="nav-button" href="../../pages/contact.html">Contact</a>
-                </div>
+                </section>
                 <a class="nav-icon" onclick="toggleNavMenu()">
                     <i class="fa fa-bars"></i>
                 </a>
@@ -58,17 +58,17 @@
 
         <!-- Page Content -->
         <main>
-            <div class="blog-heading">
+            <section class="blog-heading">
                 <h1>Welcome to my Blog!</h1>
-            </div>
+            </section>
             <section>
 
                 <!-- Graphical Component: Blog hero image with date and title -->
                 <figure>
                     <h2>Kahoot Time</h2>
-                    <div class="image-container">
+                    <section class="image-container">
                         <img src="../../images/kahoot.jpg" alt="kahoot">
-                    </div>
+                    </section>
                     <time>
                         November 4, 2023
                     </time>
@@ -196,7 +196,7 @@
             <!-- Graphical Component: Contact me through social media -->
             <section class="social-media">
                 <h5>Get in touch with me today</h5>
-                <div class="social-contacts-container">
+                <section class="social-contacts-container">
                     <a href="https://www.facebook.com" target="_blank">
                         <i class="fa-brands fa-facebook"></i>
                     </a>
@@ -206,7 +206,7 @@
                     <a href="https://www.linkedin.com" target="_blank">
                         <i class="fa-brands fa-linkedin"></i>
                     </a>
-                </div>
+                </section>
             </section>
 
             <!-- Text Component: Send mail button -->
