--- a/pages/blog.html
+++ b/pages/blog.html
@@ -42,12 +42,12 @@
 
             <!-- Text Component: Responsive navigation menu -->
             <nav>
-                <div id="nav-buttons-root" class="nav-buttons-root-hide">
+                <section id="nav-buttons-root" class="nav-buttons-root-hide">
                     <a class="nav-button" href="../index.html">Home</a>
                     <a class="nav-button" href="../pages/about.html">About</a>
                     <a class="nav-button" href="../pages/blog.html">Blog</a>
                     <a class="nav-button" href="../pages/contact.html">Contact</a>
-                </div>
+                </section>
                 <a class="nav-icon" onclick="toggleNavMenu()">
                     <i class="fa fa-bars"></i>
                 </a>
@@ -57,18 +57,18 @@
 
         <!-- Page Content -->
         <main>
-            <div class="blog-heading">
+            <section class="blog-heading">
                 <h1>Welcome to my Blog!</h1>
-            </div>
+            </section>
                 
             <!-- Kahoot Blog Post -->
             <section>
                 <!-- Graphical Component: Blog hero image with date and title -->
                 <figure>
                     <h2>Kahoot Time</h2>
-                    <div class="image-container">
+                    <section class="image-container">
                         <img src="../images/kahoot.jpg" alt="Kahoot">
-                    </div>
+                    </section>
                     <time>
                         November 4, 2023
                     </time>
@@ -99,9 +99,9 @@
                 <!-- Graphical Component: Blog hero image with date and title -->
                 <figure>
                     <h2>All Set for my Study!</h2>
-                    <div class="image-container">
+                    <section class="image-container">
                         <img src="../images/desk.jpg" alt="All set for study">
-                    </div>
+                    </section>
                     <time>
                         October 15, 2023
                     </time>
@@ -134,9 +134,9 @@
                 <!-- Graphical Component: Blog hero image with date and title -->
                 <figure>
                     <h2>Feeding Kangaroos</h2>
-                    <div class="image-container">
+                    <section class="image-container">
                         <img src="../images/zoo.jpg" alt="Feeding kangaroos">
-                    </div>
+                    </section>
                     <time>
                         September 5, 2023
                     </time>
@@ -169,9 +169,9 @@
                 <!-- Graphical Component: Blog hero image with date and title -->
                 <figure>
                     <h2>An Interesting House</h2>
-                    <div class="image-container">
+                    <section class="image-container">
                         <img src="../images/view.jpg" alt="An interesting house">
-                    </div>
+                    </section>
                     <time>
                         August 9, 2023
                     </time>
@@ -208,9 +208,9 @@
                 <!-- Graphical Component: Blog hero image with date and title -->
                 <figure>
                     <h2>Best Dessert Ever</h2>
-                    <div class="image-container">
+                    <section class="image-container">
                         <img src="../images/heart.jpg" alt="Best dessert ever">
-                    </div>
+                    </section>
                     <time>
                         July 3, 2023
                     </time>
@@ -247,7 +247,7 @@
             <!-- Graphical Component: Contact me through social media -->
             <section class="social-media">
                 <h5>Get in touch with me today</h5>
-                <div class="social-contacts-container">
+                <section class="social-contacts-container">
                     <a href="https://www.facebook.com" target="_blank">
                         <i class="fa-brands fa-facebook"></i>
                     </a>
@@ -257,7 +257,7 @@
                     <a href="https://www.linkedin.com" target="_blank">
                         <i class="fa-brands fa-linkedin"></i>
                     </a>
-                </div>
+                </section>
             </section>
 
             <!-- Text Component: Send mail button -->
