--- a/pages/contact.html
+++ b/pages/contact.html
@@ -43,12 +43,12 @@
 
             <!-- Text Component: Responsive navigation menu -->
             <nav>
-                <div id="nav-buttons-root" class="nav-buttons-root-hide">
+                <section id="nav-buttons-root" class="nav-buttons-root-hide">
                     <a class="nav-button" href="../index.html">Home</a>
                     <a class="nav-button" href="../pages/about.html">About</a>
                     <a class="nav-button" href="../pages/blog.html">Blog</a>
                     <a class="nav-button" href="../pages/contact.html">Contact</a>
-                </div>
+                </section>
                 <a class="nav-icon" onclick="toggleNavMenu()">
                     <i class="fa fa-bars"></i>
                 </a>
@@ -58,9 +58,9 @@
 
         <!-- Page Content -->
         <main>
-            <div class="contact-heading">
+            <section class="contact-heading">
                 <h2>Contact Me</h2>
-            </div>
+            </section>
             <section class="body-content">
                 <section class="contact-me-container">
 
@@ -76,19 +76,19 @@
 
                         <!-- Text Component: Contact Item -->
                         <section class="contact-item">
-                            <div class="contact-title">
+                            <section class="contact-title">
                                 <i class="fa-solid fa-envelope"></i>
                                 <h4>Email</h4>
-                            </div>
+                            </section>
                             <p>15076@coderacademy.edu.au</p>
                         </section>
 
                         <!-- Text Component: Contact Item -->
                         <section class="contact-item">
-                            <div class="contact-title">
+                            <section class="contact-title">
                                 <i class="fa-solid fa-location-dot"></i>
                                 <h4>Address</h4>
-                            </div>
+                            </section>
                             <p>Brisbane, QLD</p>
                         </section>
 
@@ -117,29 +117,29 @@
                     <section class="contact-form">
                         <h4>Get in Touch Today</h4>
                         <form>
-                            <div class="form-input-container">
+                            <section class="form-input-container">
                                 <label>Name:</label>
                                 <input class="form-input">
-                            </div>
-                            <div class="form-input-container">
+                            </section>
+                            <section class="form-input-container">
                                 <label>Email:</label>
                                 <input class="form-input">
-                            </div>
-                            <div class="form-input-container">
+                            </section>
+                            <section class="form-input-container">
                                 <label>Subject: </label>
                                 <input class="form-input">
-                            </div>
-                            <div class="form-input-container">
+                            </section>
+                            <section class="form-input-container">
                                 <label>Messages:  </label>
                                 <textarea
                                     rows="3"
                                     class="form-input"
                                     id="form-textarea"
                                 ></textarea>
-                            </div>
-                            <div class="btn-div">
+                            </section>
+                            <section class="btn-div">
                                 <button id="submit">Submit</button>
-                            </div>
+                            </section>
                         </form>
                     </section>
                 </section>
@@ -152,7 +152,7 @@
             <!-- Graphical Component: Contact me through social media -->
             <section class="social-media">
                 <h5>Get in touch with me today</h5>
-                <div class="social-contacts-container">
+                <section class="social-contacts-container">
                     <a href="https://www.facebook.com" target="_blank">
                         <i class="fa-brands fa-facebook"></i>
                     </a>
@@ -162,7 +162,7 @@
                     <a href="https://www.linkedin.com" target="_blank">
                         <i class="fa-brands fa-linkedin"></i>
                     </a>
-                </div>
+                </section>
             </section>
 
             <!-- Text Component: Send mail button -->
