updated about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -58,7 +58,7 @@
 
         <!-- Page Content -->
         <main>   
-            <section>
+            <section class="box">
                 <section class="heading">
                     <h1>About Me</h1>
                 </section>
